# mixes

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  setup.cfg  tutorial.ipynb
.github/workflows/: python-package.yml
alhambra-mixes-stub/: PUBLISHING.md  README.md  pyproject.toml
alhambra-mixes-stub/src/alhambra_mixes/: __init__.py
docs/source/: conf.py  index.rst  mixes.rst
src/alhambra/: mixes.py  quantitate.py
src/alhambra_mixes/: __init__.py  abbreviated.py  actions.py  components.py  dictstructure.py  echo.py  experiments.py  locations.py  mixes.py  printing.py  quantitate.py  references.py  units.py  util.py
src/riverine/: actions.py  echo.py  experiments.py  mixes.py  printing.py  quantitate.py  references.py
tests/: sample_specs.xlsx  test_echo.py  test_experiments.py  test_mixes.py  test_references.py  test_units.py
tests/data/: holes-order.xlsx  holes-platespecs.xlsx
